ci: allow schedule/push trigger with workflow permission

--- a/.github/workflows/trigger-law-updates.yml
+++ b/.github/workflows/trigger-law-updates.yml
@@ -3,8 +3,11 @@ on:
   schedule:
     - cron: "0 * * * *"
   workflow_dispatch:
+  push:
+    branches: [ main ]
 permissions:
   actions: write
+  workflows: write
 jobs:
   dispatch:
     runs-on: ubuntu-latest
