--- a/.github/workflows/law-updates.yml
+++ b/.github/workflows/law-updates.yml
@@ -1,7 +1,7 @@
 ﻿name: law-updates
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "*/10 * * * *"
   workflow_dispatch:
 concurrency:
   group: law-updates-hourly
