--- a/.github/workflows/law-updates.yml
+++ b/.github/workflows/law-updates.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --no-cache-dir -r requirements.txt
+          pip list
       - name: Generate JSON (web)
         env:
           LAW_OC: ${{ secrets.LAW_OC }}
