--- a/.github/workflows/law-updates.yml
+++ b/.github/workflows/law-updates.yml
@@ -27,6 +27,7 @@ jobs:
           LAW_OC: ${{ secrets.LAW_OC }}
           ASSEMBLY_KEY: ${{ secrets.ASSEMBLY_KEY }}
           ASSEMBLY_AGE: ${{ secrets.ASSEMBLY_AGE }}
+          CHANGELOG_START_DATE: "20210101"
         run: |
           python scripts/law_notifier.py --mode web --out public
           echo "--- Checking for health.json after script run ---"
@@ -35,7 +36,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/updates.json public/changes.json public/health.json data/state.json || true
+          git add public/updates.json public/changes.json public/changelog.json public/health.json data/state.json data/history.json || true
           git commit -m "Update law feed" || echo "No changes"
           git push
       - name: Wait for filesystem sync
