--- a/.github/workflows/law-updates.yml
+++ b/.github/workflows/law-updates.yml
@@ -3,6 +3,9 @@ on:
   schedule:
     - cron: "*/10 * * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - main
 concurrency:
   group: law-updates-hourly
   cancel-in-progress: true
@@ -17,6 +20,19 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: { python-version: "3.11" }
+      - name: Validate Required Secrets
+        env:
+          LAW_OC: ${{ secrets.LAW_OC }}
+          ASSEMBLY_KEY: ${{ secrets.ASSEMBLY_KEY }}
+        run: |
+          if [ -z "${LAW_OC}" ]; then
+            echo "Missing secret: LAW_OC"
+            exit 1
+          fi
+          if [ -z "${ASSEMBLY_KEY}" ]; then
+            echo "Missing secret: ASSEMBLY_KEY"
+            exit 1
+          fi
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
@@ -37,8 +53,19 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/updates.json public/changes.json public/changelog.json public/health.json data/state.json data/history.json || true
-          git commit -m "Update law feed" || echo "No changes"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes"
+            exit 0
+          fi
+          git commit -m "Update law feed"
+          for i in 1 2 3; do
+            git pull --rebase origin main && git push origin main && break
+            if [ "$i" -eq 3 ]; then
+              echo "Failed to push after retries"
+              exit 1
+            fi
+            sleep 5
+          done
       - name: Wait for filesystem sync
         run: sleep 2
       - name: Delay check (fail if stale)
